0.4.0 - currently working on
- [#1714] Fix: pi_getLL copied from oelib breaks BE localization of seminars in mod2
- [#1627] Feature: Create a file with common constants
- [#1548] Change: Move templating functions from realty_pi1 to the template helper
- [#1694] Fix: templatehelper::pi_getLL drops the $useHtmlSpecialChars parameter
- [#1439] Feature: Add functions in the testing framework to create dummy FE users and FE user groups
- [#1550] Feature: Add a config check for e-mail addresses
- [#1681] Feature: Add templatehelper::getListViewConfValueInteger and ::getListViewConfValueBoolean
- [#1104] Change: Use type hinting for function parameters
- [#1661] Feature: Add a config check for config.locale_all and for that the requested locale actually is installed
- [#999] Change: Require PHP 5.1
- [#1599] Feature: Add a function getMarker()
- [#1525, #1635] Feature: Make the content of e-mails testable
- [#1568] Feature: Add a public function isSubpartVisible
- [#1552] Feature: Add an extension icon
- [#1520] Feature: Allow to create dummy template records
- [#1545] Change: markTableAsDirty should be public
- [#1507] Feature: Add a utility function for getting associative DB results
- [#1541] Change: Remove the return; for functions that do not return anything
- [#1335] Change: Add scope="col" to the timer results table
- [#1422] Fix: Change tx_oelib_testingframework_testcase::testRemoveRelationOnRealRecord()
- [#1537] Change: Make the timer tests run faster
- [#1490] Feature: Make "cache_pages" an allowed table
- [#1489] Change: The column "doktype" should not be allowed in createFrontEndPage and createSystemFolder
- [#1471] Change: Move the testing framework from tests/fixtures/ to the oelib main directory and rename it
- [#1470] Change: Include the BE template file
- [#1325] Feature: Added function to edit existing dummy records
- [#1183] Feature: Create an EM configuration proxy